--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,28 @@ button {
   display: inline-block;
   font-size: 16px;
 }
-
+button {
+  background-color: #45BCB3; /* Green */
+  border-radius: 30px;
+  /* border: none; */
+  color: bla;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+button {
+  background-color: #45BCB3; /* Green */
+  border-radius: 30px;
+  /* border: none; */
+  color: bla;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 hr { 
 filter: blur(1px);
 display: block;overflow: hidden; border-style: inset; border-width: 2px;}
