--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,17 @@ html {
   background-color: green;
   background-size: cover;
 }
+button {
+  background-color: #45BCB3; /* Green */
+  border-radius: 30px;
+  /* border: none; */
+  color: bla;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 
 button {
   background-color: #45BCB3; /* Green */
