--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,17 @@ button {
   display: inline-block;
   font-size: 16px;
 }
+button {
+  background-color: #45BCB3; /* Green */
+  border-radius: 30px;
+  /* border: none; */
+  color: bla;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 
 button {
   background-color: #45BCB3; /* Green */
